# Tachyon

./: .gitmodules  LICENSE  README.md  TODO.md  cargo.toml
Tachyon/: .gitignore  Cargo.toml  env.ps
Tachyon/assets/web/: MsgrConfig copy.xml  MsgrConfig.xml  msgrconfig.original.xml  ppcrlcheck.srf.html
Tachyon/assets/web/ads/: textad.xml
Tachyon/doc/Photosharing/: ChangeMap.xml  PhotoAddedMap.xml  SlpPhotoSharingInvite.txt
Tachyon/doc/messengercontentcrls/: MSNContentCA.crl  MSNContentPCA.crl
Tachyon/doc/msncontentinstaller/: wink.mco
Tachyon/doc/soap/abservice/: FindContactsPagedRequest.xml
Tachyon/doc/soap/absharingservice/: FindMembershipEmptyResponse.xml
Tachyon/doc/soap/ppcrl/: RST2Response.xml
Tachyon/doc/soap/storageservice/: GetProfileRequest.xml  UpdateDocumentRequest.xml  UpdateProfileRequest.xml
Tachyon/e2e/: package-lock.json  tsconfig.json
Tachyon/e2e/src/main/: main.ts
Tachyon/e2e/src/tests/: test.spec.ts
Tachyon/lib/msnp/: Cargo.toml
Tachyon/lib/msnp/src/: lib.rs
Tachyon/src/: main.rs
Tachyon/src/matrix/: loop_bootstrap.rs  matrix_client.rs  mod.rs  stripped_room_member_event_handler.rs  sync_room_member_event_handler.rs  sync_room_message_event_handler.rs
Tachyon/src/models/: mod.rs  msn_object.rs  msn_user.rs  owned_user_id_traits.rs  tachyon_error.rs
Tachyon/src/models/abch/: events.rs
Tachyon/src/models/conversion/: audio_conversion.rs  mod.rs
Tachyon/src/models/notification/: error.rs  msn_client.rs
Tachyon/src/models/p2p/: app_id.rs  p2p_client.rs  p2p_transport_packet.rs
Tachyon/src/models/switchboard/: switchboard.rs  switchboard_error.rs
Tachyon/src/notification/: mod.rs  notification_server.rs
Tachyon/src/repositories/: ab_locator.rs  msn_user_repository.rs  settings_locator.rs
Tachyon/src/shared/: identifiers.rs  mod.rs
Tachyon/src/sockets/: command_handler.rs  notification_command_handler.rs  notification_server.rs  p2p_server.rs  switchboard_command_handler.rs
Tachyon/src/sockets/events/: mod.rs
Tachyon/src/switchboard/: mod.rs
Tachyon/src/utils/: emoji.rs  ffmpeg.rs  identifiers.rs  mod.rs
Tachyon/src/web/: ab_service.rs  error.rs  sharing_service.rs  storage_service.rs  web_endpoints.rs  web_server.rs  webserver.rs
Tachyon/src/web/soap/: ab_service.rs  error.rs  mod.rs  rst2.rs
Tachyon/v1/src/: main.rs
Tachyon/v1/src/matrix/: constants.rs  sync_typing_event_handler.rs
Tachyon/v1/src/models/: uuid.rs
Tachyon/v1/src/sockets/: echoserver.rs  msnp2p_command.rs
Tachyon/v1/src/utils/: emoji.rs  string.rs
Tachyon/v1/src/web/: ab_service.rs  sharing_service.rs  storage_service.rs
Tachyon/v2/: Cargo.toml
Tachyon/v2/src/: main.rs
Tachyon/v2/src/matrix/: login.rs  mod.rs  sync.rs
Tachyon/v2/src/notification/: client_store.rs  mod.rs  notification_server.rs
Tachyon/v2/src/shared/: error.rs  identifiers.rs  traits.rs
Tachyon/v2/src/switchboard/: switchboard_server.rs
Tachyon/v2/src/web/: mod.rs  web_server.rs
WLMatrixRust/: .gitignore  Cargo.toml  build.rs
WLMatrixRust/assets/sound/: testmsnaudio.wav.old
WLMatrixRust/assets/web/: MsgrConfig.good.xml  MsgrConfig.xml  banner.html  newwlidsvcconfig.xml  wlidsvcconfig.xml
WLMatrixRust/assets/web/ads/: swf.xml  videopicks.xml
WLMatrixRust/assets/wsdl/absharingservice/: msnab_servicetypes.xsd
WLMatrixRust/doc/Photosharing/: ProgressMap.xml  SLPTransferInvite.txt  help.txt
WLMatrixRust/doc/messengercontentcrls/: microsoftrootcert.crl
WLMatrixRust/doc/msncontentinstaller/: TFR375.cab  content.xml
WLMatrixRust/doc/soap/abservice/: FindContactsPagedResponse.xml  GroupAddFavoritesResponse.xml  UpdateDynamicItemRequest.xml
WLMatrixRust/doc/soap/absharingservice/: FindMembershipRequest.xml
WLMatrixRust/doc/soap/ppcrl/: RST2Request.xml
WLMatrixRust/doc/soap/storageservice/: DeleteRelationshipsResponse.xml  UpdateProfileResponse.xml
WLMatrixRust/e2e/: package.json
WLMatrixRust/src/: main.rs
WLMatrixRust/src/models/: ab_data.rs  capabilities.rs  client_data.rs  client_info.rs  errors.rs  mod.rs  msg_payload.rs  msn_client.rs  msn_object.rs  msn_user.rs  owned_user_id_traits.rs  slp_payload.rs  switchboard.rs  switchboard_data.rs  switchboard_handle.rs  tachyon_error.rs  uuid.rs  wlmatrix_client.rs
WLMatrixRust/src/models/abch/: events.rs
WLMatrixRust/src/models/notification/: adl_payload.rs  error.rs  mod.rs  msn_client.rs  user_notification_type.rs
WLMatrixRust/src/models/p2p/: app_id.rs  data_preparation_payload.rs  mod.rs  p2p_client.rs  p2p_payload.rs  p2p_session.rs  p2p_transport_packet.rs  pending_packet.rs  proxy_client.rs  slp_context.rs  slp_payload.rs  slp_payload_handler.rs  tlv.rs
WLMatrixRust/src/models/switchboard/: mod.rs  switchboard.rs  switchboard_error.rs
WLMatrixRust/src/repositories/: ab_data_repository.rs  ab_locator.rs  client_data_repository.rs  matrix_client_locator.rs  mod.rs  msn_client_locator.rs  msn_user_repository.rs  p2p_repository.rs  repository.rs  switchboard_repository.rs
WLMatrixRust/src/sockets/: command_handler.rs  echoserver.rs  mod.rs  msnp2p_command.rs  msnp_command.rs  msnp_command_handlers.rs  notification_command_handler.rs  notification_command_handler2.old  notification_command_handler2.rs  notification_server.rs  p2p_server.rs  switchboard_command_handler.rs  switchboard_server.rs  tcpserver.rs  webserver.rs
WLMatrixRust/src/utils/: buffer.rs  callback.rs  emoji.rs  ffmpeg.rs  identifiers.rs  matrix.rs  matrix_sync_helpers.rs  mod.rs  string.rs
WLMatrixRust/src/web/: ab_service.rs  error.rs  mod.rs  sharing_service.rs  storage_service.rs  webserver.rs
crates/msnp/: Cargo.toml
crates/msnp/src/: lib.rs
crates/msnp/src/msnp/: error.rs  mod.rs  raw_command_parser.rs
crates/msnp/src/p2p/: p2psessions.txt
crates/msnp/src/shared/: mod.rs  rfc2047.rs  traits.rs
crates/msnp/src/soap/: error.rs  mod.rs
crates/tachyon/: .gitignore  Cargo.toml
crates/tachyon/assets/web/: MsgrConfig-port-template.xml  MsgrConfig.xml  MsgrConfig_response.xml  MsgrConfig_response1.xml
crates/tachyon/src/: main.rs
crates/tachyon/src/matrix/: cross_signing.rs  mod.rs  (+15 more)
(+644 files in other folders)
