[package]
name = "wlmatrix_rust"
version = "0.1.0"
edition = "2021"
authors = ["aeon <c.lopez.dev@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
regex = "1.7.1"
lazy_static = "1.4.0"
substring = "1.4.5"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
async-trait = "0.1.64"
reqwest = { version = "0.11.14", features =["blocking"]}
log = "0.4.17"
actix-web = "4.0.1"
env_logger = "0.10.0"
chashmap = "2.2.2"
uuid = { version = "1.3.0", features = ["v3", "v4", "v5"] }
byteorder = "1.4.3"
chrono = "0.4.19"
mime = "0.3.16"
lazy-static-include = "3.1.3"
mac_address = "1.1.3"
hostname = "0.3.0"
url = "2.2.2"
base64 = "0.21.0"
js_int= "0.2.2"
urlencoding = "2.1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
tokio-graceful-shutdown = "0.12.1"
directories = "5.0.0"
rand = "0.8.5"
new_mime_guess = "4.0.1"
html-escape = "0.2.13"
xml-rs = "0.8.4"
http="0.2.8"
linked-hash-map = "0.5.6"
serde_derive = "1.0.152"
serde = "1.0.152"
sha1 = "0.10.5"
num = "0.4"
num-derive = "0.4.1"
num-traits = "0.2.15"
thiserror = "1.0.49"
anyhow= "1.0.75"
log-print-panics = { version = "2.1.2", features = ["with-backtrace"] }
ffmpeg-cli = "0.1.0"

[dependencies.matrix-sdk]
path = "lib/matrix-rust-sdk/crates/matrix-sdk"
features = ["e2e-encryption", "bundled-sqlite", "image-proc"]

#[package.metadata.vcpkg]
#dependencies = ["ffmpeg[ffmpeg]:x64-windows"]
#git = "https://github.com/microsoft/vcpkg"
#rev = "8eb5735"

[dev-dependencies]
actix-rt = "2.7.0"

[build-dependencies]
bindgen = "0.69.0"
cc = "1.0.83"

