[package]
name = "wlmatrix_rust"
version = "0.1.0"
edition = "2021"
authors = ["aeon <c.lopez.dev@proton.me>"]
build = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
regex = "1.5.5"
lazy_static = "1.4.0"
substring = "1.4.5"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
async-trait = "0.1.7"
reqwest = { version = "0.11.10", features =["blocking"]}
log = "0.4.6"
log4rs = "1.0.0"
actix-web = "4.0.1"
env_logger = "0.9.0"
http = "0.2.6"
chashmap = "2.2.2"
uuid = { version = "0.8", features = ["v3", "v4", "v5"] }
byteorder = "1.4.3"
chrono = "0.4.19"
mime = "0.3.16"
lazy-static-include = "3.1.2"
mac_address = "1.1.3"
hostname = "0.3.0"
url = "2.2.2"
base64 = "0.13.0"
js_int= "0.2.2"
serde_derive = "1.0.136"
serde = "1.0.136"
urlencoding = "2.1.0"
strum = "0.24.0"
strum_macros = "0.24.0"
xml-rs = "0.8.4"
html-escape = "0.2.11"
tokio-graceful-shutdown = "0.6.0"
directories = "4.0.1"
rand = "0.8.5"

[dependencies.matrix-sdk]
path = "matrix-rust-sdk/crates/matrix-sdk"
features = ["e2e-encryption", "sled", "native-tls"]

[dev-dependencies]
actix-rt = "2.7.0"
