[package]
name = "v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
anyhow= "1.0.75"


[dependencies.matrix-sdk]
path = "../lib/matrix-rust-sdk/crates/matrix-sdk"
features = ["e2e-encryption", "bundled-sqlite", "image-proc"]

[dependencies.msnp]
path = "../lib/msnp"