[package]
name = "v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
anyhow= "1.0.81"
axum = "0.7.5"
axum-macros = "0.4.1"
thiserror = "1.0.58"
lazy_static = "1.4.0"
regex = "1.10.4"
env_logger = "0.11.3"
log-print-panics = { version = "2.1.3", features = ["with-backtrace"] }
log = "0.4.21"
hostname = "0.4.0"
chrono = "0.4.37"
lazy-static-include = "3.2.1"
urlencoding = "2.1.3"

[dependencies.matrix-sdk]
path = "../lib/matrix-rust-sdk/crates/matrix-sdk"
features = ["e2e-encryption", "bundled-sqlite", "image-proc"]

[dependencies.msnp]
path = "../lib/msnp"