[package]
name = "msnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaserde = { version = "0.9.2" }
yaserde_derive = {version = "0.9.2" }
uuid = { version = "1.5.0", features = ["v3", "v4", "v5"] }
byteorder = "1.5.0"
strum = "0.26.2"
strum_macros = "0.26.2"
xml-rs = "0.8.19"
base64 = "0.22.0"
sha1 = "0.10.6"
html-escape = "0.2.13"
new_mime_guess = "4.0.1"
email-encoding = "0.3.0"
filetime_type = "0.1.3"
bit-array = "0.4.4"

# Used in P2P Status
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"

rand = "0.8.5"

#SLP PAYLOAD HEADERS ?
linked-hash-map = "0.5.6"

#Workspace dependeicies
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
lazy-static-include.workspace = true
urlencoding.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
hex = "0.4.3"
typenum = "1.17.0"
mime = "0.3.17"

[lib]
name = "msnp"
path = "src/lib.rs"

[features]
default = ["soap"]
soap = []
msnp18 = []