[package]
name = "tachyon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
axum-macros = "0.4.1"
log-print-panics = { version = "2.1.3", features = ["with-backtrace"] }
hostname = "0.4.0"
http-body-util = "0.1.1"
dashmap = "5.5.3"
directories = "5.0.1"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
async-stream = "0.3.6"
futures-core = "0.3.31"
tokio-retry2 = { version = "0.5", features = ["jitter"] }

#todo move in workspace
base64 = "0.22.0"

#Used for message formatting parsing
html5ever = "0.27.0"

#Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
lazy-static-include.workspace = true
urlencoding.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
regex.workspace = true
futures = "0.3.31"
futures-util = "0.3.31"


[dependencies.matrix-sdk]
path = "../../lib/matrix-rust-sdk/crates/matrix-sdk"
features = ["e2e-encryption", "automatic-room-key-forwarding", "bundled-sqlite", "native-tls"]

[dependencies.matrix-sdk-ui]
path = "../../lib/matrix-rust-sdk/crates/matrix-sdk-ui"

[dependencies.msnp]
path = "../msnp"