[package]
name = "tachyon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = { version = "0.8.8", features = ["default", "multipart"] }
axum-macros = "0.4.1"
log-print-panics = { version = "2.1.3", features = ["with-backtrace"] }
hostname = "0.4.0"
http-body-util = "0.1.1"
dashmap = "5.5.3"
directories = "5.0.1"
tokio-retry2 = { version = "0.5", features = ["jitter"] }
sha1 = "0.10.6"
hex = "0.4.3"
maud = { version = "0.27.0", features = ["axum"] }
url_open = "0.0.2"
aes-gcm = "0.10.3"
configparser = "3.1.0"


#todo move in workspace
base64 = "0.22.0"

yaserde = { version = "0.9.2" }
yaserde_derive = {version = "0.9.2" }

#Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
lazy-static-include.workspace = true
urlencoding.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
regex.workspace = true
futures = "0.3.31"
futures-util = "0.3.31"
ruma = { version = "0.14.1", features = ["api", "events"] }
rand = "0.10.1"
reqwest = "0.12.28"
mime = "0.3.17"

[dev-dependencies]
mockall = "0.13.1"
wiremock = "0.6.3"

[dev-dependencies.matrix-sdk]
path = "../../lib/matrix-rust-sdk/crates/matrix-sdk"
features = ["testing"]

[dependencies.matrix-sdk]
path = "../../lib/matrix-rust-sdk/crates/matrix-sdk"
features = ["e2e-encryption", "automatic-room-key-forwarding", "bundled-sqlite", "native-tls"]

[dependencies.matrix-sdk-ui]
path = "../../lib/matrix-rust-sdk/crates/matrix-sdk-ui"

[dependencies.msnp]
path = "../msnp"
