[package]
name = "msnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaserde = { version = "0.10.0" }
yaserde_derive = {version = "0.10.0" }
uuid = { version = "1.5.0", features = ["v3", "v4", "v5"] }
chrono = "0.4.31"
byteorder = "1.5.0"
thiserror = "1.0.50"
lazy_static = "1.4.0"
lazy-static-include = "3.2.1"
strum = "0.26.2"
strum_macros = "0.26.2"
anyhow= "1.0.75"
log = "0.4.20"
regex = "1.10.2"
env_logger = "0.11.3"

[lib]
name = "msnp"
path = "src/lib.rs"

[features]
default = ["soap", "msnp18"]
soap = []
msnp18 = []