[package]
name = "msnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaserde = { version = "0.10.0" }
yaserde_derive = {version = "0.10.0" }
uuid = { version = "1.5.0", features = ["v3", "v4", "v5"] }
chrono = "0.4.31"
byteorder = "1.5.0"
thiserror = "1.0.58"
lazy_static = "1.4.0"
lazy-static-include = "3.2.1"
strum = "0.26.2"
strum_macros = "0.26.2"
anyhow= "1.0.75"
log = "0.4.20"
regex = "1.10.2"
env_logger = "0.11.3"
xml-rs = "0.8.19"
urlencoding = "2.1.3"
base64 = "0.22.0"
sha1 = "0.10.6"
html-escape = "0.2.13"
new_mime_guess = "4.0.1"

# Used in P2P Status
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"

rand = "0.8.5"

#SLP PAYLOAD HEADERS ?
linked-hash-map = "0.5.6"

[lib]
name = "msnp"
path = "src/lib.rs"

[features]
default = ["soap"]
soap = []
msnp18 = []